[package]
# TODO remove -rs
name = "oidc4vci-rs"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Core library for Verifiable Credentials and Decentralized Identifiers."
repository = "https://github.com/spruceid/oidc4vci-rs/"

[features]
default = ["encryption"]
encryption = ["josekit"]

[dependencies]
ssi = { path = "../ssi" }
did-method-key = { path = "../ssi/did-key" }
did-jwk = { path = "../ssi/did-jwk" }
did-web = { path = "../ssi/did-web" } # TODO use traits
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
percent-encoding = "2.2"
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
lazy_static = "1.4"
josekit = { version = "0.8", optional = true }
url = { version = "2.3.1", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
openidconnect = "3.0.0-alpha.1"
async-signature = "0.3.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }
